// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Dialog component default 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - scroll_behavior items: container 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - scroll_behavior items: overall 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-overall"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - spacing items: large 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-large t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - spacing items: medium 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - spacing items: none 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-none t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - spacing items: small 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-small t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - theme items: dark 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-light"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-light">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-dark">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - theme items: light 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - theme items: none 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium ">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - theme items: xdark 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-light"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-light">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-xdark">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - theme items: xlight 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-xlight">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - width items: auto 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-auto"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - width items: full 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-full"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - width items: optimal 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-optimal"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;

exports[`Bolt Dialog prop - width items: regular 1`] = `
<div class="c-bolt-dialog c-bolt-dialog__scroll-container"
     aria-hidden="true"
>
  <div class="c-bolt-dialog__overlay c-bolt-dialog__overlay-dark"
       tabindex="-1"
       data-dialog-close
  >
    <div class="c-bolt-dialog__container c-bolt-dialog__container--width-regular"
         role="dialog"
         aria-dialog="true"
    >
      <div class="c-bolt-dialog__close t-bolt-dark">
        <button class="c-bolt-dialog__close-button e-bolt-button e-bolt-button--transparent e-bolt-button--icon-only"
                type="button"
                data-dialog-close
                aria-label="Close dialog"
        >
          <span class="e-bolt-button__icon-center"
                aria-hidden="true"
          >
            <bolt-icon name="close"
                       aria-hidden="true"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </span>
        </button>
      </div>
      <div class="c-bolt-dialog__body c-bolt-dialog__body--spacing-medium t-bolt-light">
        This is a dialog
      </div>
    </div>
  </div>
</div>
`;
